--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+<title>Chamberlands Restaraunt</title>
+<link rel="stylesheet" type="text/css" href="main.css" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
+<!-- Start Border -->
+ <!-- Start Main Wrapper -->
+  <div id="wrapper">
+    <!-- Start Header -->
+    <div id="header"> <img src="images/logo ristorante.png" alt="" class="header" /> </div>
+    <!-- End Header -->
+    <!-- Start Navigation Bar -->
+    <div id="navbar"> Nav </div>
+    <!--`End Navigation Bar -->
+    <!-- Start Center Column -->
+    <div id="centercolumn"> 
+      <ul>
+        <li>
+          AAA
+        </li>
+        <li>
+          BB
+        </li>
+        <li>
+          CC
+        </li>
+      </ul>
+      
+      
+      <!-- <img src="images/menu.jpg" alt="Menu" width="297" height="550" /> <br /> -->
+    </div>
+    <!-- End Center Column -->
+   </div>
+  <!-- End Main Wrapper -->
+  <br />
 
+<!-- End Border -->
+</body>
 </html>
